<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thesis-Prototype</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no">No</string>
    <string name="red_option">Red Option</string>
    <string name="green_option">Green Option</string>
    <string name="title">Title</string>
    <string name="add_items">add</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="do_you_want_to_delete_this_item">Do you want to delete this item?</string>
    <string name="action_add_checklist">Add Checklist</string>
    <string name="drawer_open">open checklist selection drawer</string>
    <string name="drawer_close">close checklist selection drawer</string>

</resources>
