<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_add_item"
        android:showAsAction="always"
        android:title="@string/add_items"
        android:icon="@android:drawable/ic_menu_add"/>

    <item
        android:id="@+id/action_sync"
        android:showAsAction="always"
        android:title="Sync"
        android:icon="@android:drawable/ic_menu_upload"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_add_checklist"
        android:title="@string/action_add_checklist"
        android:showAsAction="never"/>

    <item
        android:id="@+id/action_test"
        android:title="@string/test"
        android:showAsAction="never"/>
</menu>
